{{$NEXT}}

1.302045  2016-07-18 09:05:15-07:00 America/Los_Angeles

    - No changes from last TRIAL release

1.302044  2016-07-13 17:56:20-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix test that segv'd on older perls

1.302043  2016-07-12 09:37:31-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix TODO in mixed T2/TB subtests

1.302042  2016-07-11 20:30:35-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix IPC event ordering bug

1.302041  2016-07-09 17:01:45-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Work around IPC bug on windows

1.302040  2016-07-09 16:55:00-07:00 America/Los_Angeles

    - No changes from last trial

1.302039  2016-07-07 22:01:02-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add Info event for better diagnostics

1.302038  2016-07-05 07:00:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix broken MANIFEST.SKIP entries (#689)

1.302037  2016-07-04 10:09:00-07:00 America/Los_Angeles

    - No changes from trial

1.302036  2016-07-03 11:52:45-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Restore PerlIO layer cloning on STDERR and STDOUT

1.302035  2016-06-27 08:55:55-07:00 America/Los_Angeles

    - No changes since TRIAL release

1.302034  2016-06-25 13:51:00-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix some breakage info (Thanks Dolman!)
    - POD Fixes (Thanks cpansprout!)

1.302033  2016-06-24 05:56:54-07:00 America/Los_Angeles

    - No changes from last trial release

1.302032  2016-06-22 11:30:46-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix nested TODO handling of Diags (#684)

1.302031  2016-06-21 09:51:27-07:00 America/Los_Angeles

    - Remove carp from dep list #682

1.302030  2016-06-18 19:02:55-07:00 America/Los_Angeles

    - No changes from last DEV release

1.302029  2016-06-17 06:56:54-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Properly skip thread test when threads are broken

1.302028  2016-06-16 19:21:58-07:00 America/Los_Angeles (TRIAL RELEASE)
